--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   flutter_common_extensions: ^0.0.3
@@ -22,6 +23,13 @@ dependencies:
   dartz: ^0.10.1
   flutter_svg: ^2.0.7
   percent_indicator: ^4.2.3
+  firebase_core: ^2.17.0
+  cloud_firestore: ^4.9.3
+  firebase_storage: ^11.2.8
+  flutter_facebook_auth: ^6.0.2
+  image_picker: ^1.0.4
+  cached_network_image: ^3.3.0
+  file_picker: ^5.5.0
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +46,9 @@ flutter:
 
   assets:
     - assets/image/onboarding/
+    - assets/image/auth/
+    - assets/image/home/
+    - assets/image/home/test/
 
 
 
